# AI-Resume-Parser

./: .gitignore  Resume Analyser.ipynb  app.py  docker-compose.prod.yaml  docker-compose.yaml  package.json  readme.md  server.py
backend/: .dockerignore  Dockerfile  main.py  pyproject.toml  requirements.txt  run.py  server.py
backend/api/endpoints/: __init__.py  auth.py  cold_mail_generator.py  hiring_assistant.py  resume_analysis.py
backend/app/: main.py
backend/app/agents/: __init__.py  github_agent.py  web_content_agent.py  websearch_agent.py
backend/app/api/: ats.py  hiring_assistant.py  tailored_resume.py
backend/app/config/: __init__.py  settings.py
backend/app/core/: config.py  llm.py
backend/app/data/: __init__.py  skills.py
backend/app/database/: __init__.py  database.py  init_db.py  models.py
backend/app/model/: tfidf.pkl
backend/app/models/: __init__.py  analysis.py  error.py  hiring.py  resume.py  schemas.py  tips.py
backend/app/resume_generator/: graph.py
backend/app/routes/: __init__.py  ats.py  cold_mail.py  hiring.py  hiring_assistant.py  linkedin.py  postgres.py  resume.py  resume_analysis.py  tailored_resume.py  tips.py
backend/app/services/: __init__.py  ats.py  cold_mail.py  data_processor.py  hiring.py  hiring_assiatnat.py  (+14 more)
backend/core/: config.py  ml_setup.py
backend/db/: init_db.py  session.py
backend/experiment/: exp.ipynb
backend/llm/: __init__.py  llm_config.py  prompts.py
backend/schemas/: __init__.py  common.py  comms.py  hiring.py  prep.py  resume.py  user.py
backend/security/: __init__.py  auth.py
(+241 files in other folders)
